---
config:
  theme: mc
id: 191bf93d-78b6-457d-a037-5cc6334aa269
---
erDiagram
	direction TB
	SYSTEM_USER {
		int id PK ""  
		int employee_id  FK ""  
		string username  ""  
		string password_hash  ""  
		string email  ""  
		string role  ""  
		bool is_active  ""  
	}

	AUDIT_LOG {
		int id PK ""  
		int user_id FK ""  
		date timestamp  ""  
		string table_name  ""  
		string operation_type  ""  
		string changed_by_user_id ""  
		string old_values  ""  
		string new_values  ""  
		string details  ""  
	}

	COMPANY {
		string code PK ""  
		string name  ""  
		string logo  ""  
		int location_id FK ""  
	}

	DIVISION {
		string code PK ""  
		string name  ""  
		string company_code FK ""  
	}

	LOCATION {
		int id PK ""  
		string address  ""  
		string city  ""  
		string country  ""  
		string postal_code  ""  
	}

	DEPARTMENT {
		string code PK ""  
		string name  ""  
		string div_code FK ""  
	}

	EMPLOYEE {
		int id PK ""  
		string first_name  ""  
		string last_name  ""  
		date hire_date  ""  
		date birth_date  ""  
		int phone_number  ""  
		string salary_type ""
		string email  ""  
		string job_code FK ""  
		int status_id FK ""  
		int employment_type_id FK ""  
		int contract_type_id FK ""  
		int location_id FK ""  
		int anniversary_type_id FK ""  
	}

	ACTING_ASSIGNMENT {
		int id PK ""  
		string job_code FK ""  
		int employee_id FK ""  
		date start_date  ""  
		date end_date  ""  
		bool is_current  ""  
	}

	EMPLOYEE_STATUS {
		string id PK ""  
		string status_name  ""  
	}

	EMPLOYMENT_TYPE {
		string id PK ""  
		string name  ""  
	}

	EMPLOYEE_SUPERVISOR {
		int employee_id FK ""  
		int supervisor_id FK ""  
		date start_date  ""  
		date end_date  ""  
	}

	POSITION_HISTORY {
		int id PK ""  
		int employee_id FK ""  
		string job_code FK ""  
		date start_date  ""  
		date end_date  ""  
		string position_type  ""  
	}

	STATUS_HISTORY {
		int id PK ""  
		int employee_id FK ""  
		string status_id FK ""  
		date start_date  ""  
		date end_date  ""  
	}

	CONTRACT_TYPE {
		string id PK ""  
		string name  ""  
		string duration  ""  
	}

	ANNIVERSARY_TYPE {
		int id PK ""  
		string type  ""  
		string description  ""  
		date created_at  ""  
		date updated_at  ""  
		date anniversary_date  ""  
		string created_by  ""  
		string updated_by  ""  
	}

	EMPLOYEE_CONTRACT {
		int id PK ""  
		int employee_id FK ""  
		string contract_type_id FK ""  
		date probation_end_date  ""  
		date start_date  ""  
		date end_date  ""  
		string terms_and_conditions  ""  
	}

	SEPARATION_Details {
		int id PK ""  
		int employee_id FK ""  
		int reason_id FK ""  
		date separation_date  ""  
		string notes  ""  
		bool rehire_eligibility  ""  
	}

	SEPARATION_REASON {
		int id PK ""  
		string reason_description  ""  
	}

	JOB {
		string code PK ""  
		string title  ""  
		float min_salary  ""  
		float max_salary  ""  
		string grade
		int department_code FK ""  
	}

	GRADE {
		string code PK ""  
		string name  ""  
		string description  ""
	}

	SYSTEM_USER||--o{AUDIT_LOG:"tracked_by"
    SYSTEM_USER||--o|EMPLOYEE: "linked to"
	COMPANY||--|{DIVISION:"has"
	COMPANY||--|{LOCATION:"operates_in"
	DIVISION||--|{DEPARTMENT:"has"
	DEPARTMENT||--|{JOB:"has"
	JOB||--|{EMPLOYEE:"employ"
	JOB||--o{ACTING_ASSIGNMENT:"can_have"
	JOB||--|{GRADE:"classified_as"
	EMPLOYEE}|--||EMPLOYEE_STATUS:"has"
	EMPLOYEE}|--||EMPLOYMENT_TYPE:"classified_as"
	EMPLOYEE}|--||LOCATION:"assigned_to"
	EMPLOYEE||--||ACTING_ASSIGNMENT:"has"
	EMPLOYEE||--o{EMPLOYEE_SUPERVISOR:"supervised_by"
	EMPLOYEE||--|{POSITION_HISTORY:"recorded_in"
	EMPLOYEE||--|{STATUS_HISTORY:"recorded_in"
	EMPLOYEE_CONTRACT}o--||CONTRACT_TYPE:"explained_by"
	EMPLOYEE}o--||ANNIVERSARY_TYPE:"tracked_by"
	EMPLOYEE||--o|EMPLOYEE_CONTRACT:"may_have"
	EMPLOYEE||--o|SEPARATION_Details:"may_have"
	SEPARATION_REASON||--|{SEPARATION_Details:"explained_by"